# sqlserver-schema-manager

./: README.md  pyproject.toml
example/: main.py  schema.py
sssm/: align.py  exceptions.py  sql.py  util.py
sssm/db_entities/: attributes.py  declared.py  reflected.py
