[project]
name = "db-schema-manager"
description = "Library for programatically defining a database schema and applying it to a database, or interatively inspecting an existing database schema"
authors = [
    { name = "Finn Andersen" }
]
readme = "README.md"
requires-python = ">=3.8, <3.12"
dynamic = ["version"]

dependencies = [
    "pydantic",
]

[project.urls]
repository = "https://github.com/Finndersen/sqlserver-schema-manager.git"

[tool.ruff]
line-length = 120
target-version = "py311"